# coco

./: .claude-plugin.json  .env.example  .gitignore  .mcp.json  BRAIN-ARCHITECTURE.html  CHANGELOG.md  CLAUDE.local.md  CLAUDE.local.md.template  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRON-ECOSYSTEM-MAP.html  FEATURE-INVENTORY.html  KNOWLEDGE-QUALITY-REPORT.html  LICENSE  LICENSE-STUDIO  PLATFORM-ANALYSIS.html  PLATFORM-ANALYSIS.md  README.md  SECURITY.md  SESSION-HANDOFF-2026-04-16.md  SESSION-HANDOFF-2026-04-19.md  SHIP.md  STABILITY-PLAN.md  USER-JOURNEY-GAPS.html  USER-JOURNEY-UPDATED.html  USER-JOURNEY-V2.html  VERSION-CONTROL-PLAN.md  _brain_manifest.json  docker-compose.test.yml  install.sh  package.json  setup.sh
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_baseline.py  002_triggers_action_type_self_improve.py  003_todo_dependencies.py  004_agent_tasks.py  005_human_ids.py  009_widen_cost_ledger_source.py
backend/app/: config.py  main.py
backend/app/api/: deps.py  error_envelope.py
backend/app/core/: settings.py
backend/app/db/: compat.py  engine.py  init_db.py  models.py  search.py  session.py  tables.py  tree_utils.py
backend/app/mcp/: server.py
backend/app/middleware/: auth.py  (+1 more)
backend/tests/: conftest.py  test_attention.py  test_briefing.py  test_dashboard.py  test_drafts.py  test_graph.py  test_inbox.py  test_ingest.py  test_knowledge_search.py  test_queue_service.py  test_rag_tools_engine.py  test_retrieval_pipeline.py  test_station_manager.py  test_trigger_actions.py  test_wave01_persistence.py
(+1348 files in other folders)
