[project]
name = "coco-platform"
version = "0.1.0"
description = "CoCo Platform — visual control plane for CoCo + Knowledge Hub"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.5.0",
    "psutil>=6.0.0",
    "structlog>=24.0.0",
    "edge-tts>=6.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "kokoro>=0.9.4",
    "anthropic>=0.49.0",
    "mcp[cli]>=1.26.0",
    "sqlalchemy>=2.0.48",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
